adjusting right side for layout bug

--- a/css/shanti-main-shanti_sarvaka_texts.css
+++ b/css/shanti-main-shanti_sarvaka_texts.css
@@ -19,10 +19,9 @@
   color: #764B8D !important;
 }
 
-/* adjust for Texts */
-.main-wrapper{
-  margin-right: 15px !important;
-}
+/* bugfix */
+.main-wrapper{ margin-right: 15px !important;}
+.header-banner .menu-icon{ right:0.4rem; /* coordinate with main-wrapper margin-right shim */}
 
 .nav-justified > li.active > a:after {
   /* border-color: #764B8D !important; */
